# log-simulator

backend/: pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: auth.py  jobs.py  log_templates.py  tools.py
backend/app/core/: custom_api_route.py  custom_page.py  fastapi_logger.py  postgres_engine.py  security.py  settings.py
backend/app/core/auth_jwt/: __init__.py  auth_config.py  auth_jwt.py
backend/app/core/db/: base.py  init_data.py  (+1 more)
backend/app/models/: __init__.py  aaa.py  base.py  job.py  log_template.py
backend/app/schemas/: account.py  job.py  log_template.py  tools.py
backend/app/scripts/: init_data.py
backend/app/services/: aaa.py  account.py  job_service.py  log_generator.py  log_template_service.py  parsing_service.py
backend/migrations/: env.py
backend/migrations/versions/: a7c8a4717908_add_aaa_job_log_template.py
backend/predefined_templates/: fortigate_anomaly_logs.yml  fortigate_antivirus_logs.yml  fortigate_appctrl_logs.yml  fortigate_cifs_logs.yml  fortigate_dlp_logs.yml  fortigate_dns_logs.yml  fortigate_forward_traffic.yml  fortigate_ha_events.yml  fortigate_ips_logs.yml  fortigate_local_traffic.yml  fortigate_multicast_traffic.yml  fortigate_router_events.yml  fortigate_sniffer_traffic.yml  fortigate_ssh_logs.yml  fortigate_ssl_logs.yml  fortigate_system_events.yml  fortigate_user_events.yml  fortigate_vpn_events.yml  fortigate_webfilter_logs.yml  fortigate_wireless_events.yml  paloalto_threat_logs.yml  paloalto_traffic_logs.yml
backend/test/: test_ecs_generator.py  test_fortigate_parsing.py  test_parser.py  test_yaml_loading.py
(+77 files in other folders)
