[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "alembic==1.16.5",
    "pydantic==2.11.7",
    "redis==6.4.0",
    "faker==37.5.3",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bcrypt==4.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cryptography==45.0.6",
    "dnspython==2.7.0",
    "ecs-logging==2.2.0",
    "email-validator==2.3.0",
    "fastapi-decorators==1.0.18",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]
